@@ -2,6 +2,7 @@
 == ChangeLog (Coova Chilli current svn revision) ==
 
 * New option ''uamdomain'' whereby entire domains, one per use of option, can be white-listed.
+* New option ''dnsparanoia'' to drop DNS responses (pre-authentication) containing any non- A, CNAME, SOA, or MX records
 * Fix in 64-bit portability - thx ccesario for helping out
 	
 == ChangeLog (Coova Chilli v1.0.7 svn revision 95) ==
